force-app/main/default/objects/Adjustment_Application__c/Adjustment_Application__c.object-meta.xml
<CustomObject>
    <label>Adjustment Application</label>
    <nameField>
        
        <label>Adjustment Applications Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Adjustment Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>