force-app/main/default/objects/Adjustment_Application__c/fields/Bill_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Bill_Adjustment__c</fullName>
    <label>Bill Adjustment</label>
    <referenceTo>Bill_Adjustment__c</referenceTo>
    <relationshipLabel>Adjustment Applications</relationshipLabel>
    <relationshipName>Adjustment_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>