force-app/main/default/objects/Adjustment_Application__c/fields/Overpayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overpayment_Amount__c</fullName>
    <label>Overpayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>