force-app/main/default/objects/Adjustment_Application__c/fields/System_Bill__c.field-meta.xml
<CustomField>
    <fullName>System_Bill__c</fullName>
    <label>System Bill</label>
    <referenceTo>System_Bill__c</referenceTo>
    <relationshipLabel>Adjustment Applications</relationshipLabel>
    <relationshipName>Adjustment_Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>