force-app/main/default/objects/Adjustment_Application__c/validationRules/Cant_Apply_Remove_Published_Bill.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Apply_Remove_Published_Bill</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(System_Bill__c), System_Bill__r.Account_Bill__r.Published__c = True)</errorConditionFormula>
    <errorMessage>Adjustment cannot be applied to or removed from a published bill</errorMessage>
</ValidationRule>